# pyacoustics-stc

./: LICENSE  README.md  pyproject.toml
pyacoustics_stc/: __init__.py  constant.py  sound_tranmission_class.py  utils.py
tests/: test_sound_transmission_class.py
