[tool.poetry]
name = "pyacoustics-stc"
version = "0.1.0"
description = "The Python library for Sound Transmission Class (STC) calculation"
authors = ["Peem Srinikorn (Bozzlab) <peemsrinikorn@gmail.com>"]
keywords = ["Acoustics", "Sound Tranmission Class", "Sound Transmission Loss", "STC"]
readme = "README.md"
license = "MIT License"
homepage = "https://github.com/bozzlab/pyacoustics-stc"
repository = "https://github.com/bozzlab/pyacoustics-stc"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"
pytest = "^7.0.0"
pyqt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
prospector = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
