[tool.poetry]
name = "pyacoustics-stc"
version = "0.2.1"
description = "The Python library for Sound Transmission Class (STC) calculation"
authors = ["Peem Srinikorn (Bozzlab) <peemsrinikorn@gmail.com>"]
keywords = ["Acoustics", "Sound Tranmission Class", "Sound Transmission Loss", "STC"]
readme = "README.md"
license = "MIT License"
homepage = "https://github.com/bozzlab/pyacoustics-stc"
repository = "https://github.com/bozzlab/pyacoustics-stc"

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "2.2.2"

[tool.poetry.dev-dependencies]
black = "20.8b0"
pytest = "6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
